--- a/curriculo.html
+++ b/curriculo.html
@@ -5,6 +5,13 @@
   </head>
   <body>
     <h1>Meu Currículo</h1>
+    <div>
+      <h3>Dados Pessoais</h3>
+      Nome: Lucas Luiz Azevedo
+      Data de Nasc.: 01/02/1989
+      Cidade: Mandaguari
+      UF: PR
 
+    </div>
   </body>
 </html>
