--- a/curriculo.html
+++ b/curriculo.html
@@ -1,17 +1,131 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>Currículo: Lucas Azevedo</title>
+    <title>Curr&iacute;culo: Lucas Azevedo</title>
   </head>
   <body>
-    <h1>Meu Currículo</h1>
+    <h1>Meu Curr&iacute;culo</h1>
     <div>
-      <h3>Dados Pessoais</h3>
-      Nome: Lucas Luiz Azevedo
-      Data de Nasc.: 01/02/1989
-      Cidade: Mandaguari
-      UF: PR
 
+      <h3>Dados Pessoais</h3>
+        Nome: Lucas Luiz Azevedo
+        Data de Nasc.: 01/02/1989
+        Cidade: Mandaguari
+        UF: PR
+
+      <h3>Escolaridade</h3>
+        <ul>
+          <li>
+            Cursando 2<sup>o</sup> Ano de Ci&ecirc;ncia da Computa&ccedil;&atilde;o (2016)
+              <ul>
+                <li>Faculdade: FAFIMAN</li>
+                <li>Ano In&iacute;cio: 2015</li>
+              </ul>
+          </li>
+        </ul>
+
+        <h3>Cursos Realizados</h3>
+          <ul>
+            <li>Datilografia</li>
+            <li>DOS</li>
+            <li>Windows 98SE</li>
+            <li>Windows XP</li>
+            <li>Windows Server 2008</li>
+            <li>Office 97</li>
+            <li>Office XP</li>
+            <li>Corel Draw 9</li>
+            <li>Corel Photo 9</li>
+            <li>FrontPage 97</li>
+            <li>Fireworks MX</li>
+            <li>Flash MX</li>
+            <li>DreamWeaver MX</li>
+            <li>Rede de Computadores</li>
+            <li>Hardware e Manuten&ccedil;&atilde;o de Computadores</li>
+            <li>Matem&aacute;tica Financeira</li>
+            <li>Ingl&ecirc;s B&aacute;sico</li>
+          </ul>
+
+
+        <h3>Experi&ecirc;ncias</h3>
+          <ul>
+            <li>Windows 95/98/98SE/ME/XP/Vista/7/8/8.1/10</li>
+            <li>Famelix</li>
+            <li>Ubuntu</li>
+            <li>Windows Server 2000/2003/2008/2008R2/2012/2012R2</li>
+            <li>Ubuntu Server 12.04/14.04</li>
+            <li>CentOS 6/7</li>
+            <li>Debian 7/8</li>
+            <li>
+              Proxy Server Autenticado com AD 2003/2008/2008R2/2012/2012R2
+              <ul>
+                <li>Endian 2.x</li>
+                <li>pfSense 2.x</li>
+              </ul>
+            </li>
+            <li>
+              Monitoramento de Rede
+              <ul>
+                <li>Zabbix 2.x/3.0</li>
+              </ul>
+            </li>
+            <li>
+              Firewall
+              <ul>
+                <li>Mikrotik</li>
+              </ul>
+            </li>
+            <li>
+              Servidor Antivirus
+              <ul>
+                <li>Eset Remote Administrator 5</li>
+              </ul>
+            </li>
+            <li>Hyper-V</li>
+            <li>Controlador de Domínio 2003/2008/2008R2/2012/2012R2</li>
+            <li>File Server 2003/2008/2008R2/2012/2012R2 e Samba 4</li>
+            <li>Squid 3/Sarg 3/Dansguardian/webadmin</li>
+
+          </ul>
+
+
+        <h3>Experi&ecirc;ncia Profissional</h3>
+          <ul>
+            <li>
+              Caixa Econ&ocirc;mica Federal
+                <ul>
+                  <li>Cargo: Escritur&iacute;rio Aprendiz</li>
+                  <li>Per&iacute;odo: 01/06/2004 - 01/06/2006</li>
+                </ul>
+            </li>
+            <li>
+              Representante Panatl&iacute;ntica
+                <ul>
+                  <li>Cargo: Assistente Administrativo</li>
+                  <li>Per&iacute;odo: 15/01/2007 - 20/05/2007</li>
+                </ul>
+            </li>
+            <li>
+              Lot&iacute;rica Mandaguari
+                <ul>
+                  <li>Cargo: Operador de Caixa</li>
+                  <li>Per&iacute;odo: 27/05/2007 - 31/09/2012</li>
+              </ul>
+            </li>
+            <li>
+              Romagnole Transformadores S/A
+                <ul>
+                  <li>Cargo: Pintor Industrial</li>
+                  <li>Per&iacute;odo: 07/10/2012 - 31/08/2014</li>
+              </ul>
+            </li>
+            <li>
+              IronTech Inform&iacute;tica e Seguran&ccedil;a
+                <ul>
+                  <li>Cargo: Suporte T&iacute;cnico</li>
+                  <li>Per&iacute;odo: 01/09/2015 - Atual</li>
+                </ul>
+            </li>
+        </ul>
     </div>
   </body>
 </html>
